# benj

./: .gitignore  .readthedocs.yml  DESCRIPTION  DESCRIPTION.in  Makefile  Makefile.am  Makefile.in  NAMESPACE  README.org  configure  configure.ac  setup.py
.github/workflows/: autoreconf.yml  static.yml
R/: archr.R  barcodes_10x.R  bulk_rna.R  colors.R  deg.R  enrich.R  gene.R  genomics.R  geo.R  glm.R  go.R  h5ad.R  installExtra.R  ldsc.R  multiome.R  plotting.R  pseudobulk_excel.R  sc.R  single_cell.R  text.R  util_general.R  util_matrix.R  util_plot.R
benj/: __init__.py  _compat.py  aggregate.py  annotate.py  arg_parse.py  bridge.py  cca.py  color.py  count_atac.py  gene_estimation.py  incrementallsi.py  incrementalpca.py  incrementalsvd.py  integration.py  lee.py  load_anndata.py  log.py  metacell.py  mu.py  mudata.py  nmf.py  parse_anndata.py  pic.py  pseudobulk.py  rgg.py  setup_scanpy.py  spectral.py  timer.py  utils.py  window.py
conda/: benj.yml  benj.yml.in  cellbender.yml  chrombpnet.yml  cpdb.yml  pybenj.yml  rbenj.yml  scenicplus.yml
docs/: conf.py  deg.rst  index.html  index.rst
docs/pydocs/: deg.ipynb
docs/rdocs/: 404.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml  sitemap.xml
docs/rdocs/reference/: autoHeatmap.html  bed.dump.html  bed.slurp.html  bulk_aggregate.html  bulk_aggregate_star.html  calc_binomial_CI.html  calculate_qc_metrics.html  createGeneAnnotationGFF.html  deg.deseq2.html  deg.dysregulation.html  deg.edger.html  deg.extract.covariates.from.design.html  deg.filter.design.html  deg.filter.outliers.html  deg.html  deg.mast.html  deg.nebula.html  deg.prepare.html  deg.ruvseq.html  diag.mat3.html  dot-decompress_indptr.html  dot-get_sparse.html  dot-parse_h5ad_X.html  dot-parse_h5ad_dataframe.html  dot-parse_h5ad_obs.html  dot-parse_h5ad_var.html  dot-summarizeJASPARMotifs.html  enrichGO.html  (+49 more)
modules/lmod-conda/: conda.lua
scripts/: aggregate_anndata.py  annotate.py  archr_from_fragments.R  cellranger_metrics_summary.py  check_batch.sh  cr2h5ad.py  deg.R  estimate_gacc_and_rank.py  estimate_gene_accessibility.py  h5ad_chromvar.py  h5ad_from_archr_annotation.py  h5ad_from_archr_annotation.sh  h5ad_from_cellranger_rna.py  h5ad_from_cellranger_rna.sh  h5ad_from_fragments_pic.py  h5ad_rna_epiclust.py  h5ad_to_xlsx.py  integrate_and_train.py  integrate_and_train.py~  integrate_atac.py  integrate_rna.py  jupyter_luria.sh  multiome_extract_gex.py  sort_tabix_list.py  tile_genome.py  tilematrix_umap.py  velocyto_slurmgen.sh
tests/: testthat.R
tests/testthat/: test-h5ad.R
